import "LockInfo.proto";


option java_outer_classname="GetCacheItemCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message GetCacheItemCommand {
	optional bytes key = 1;
	optional int64 requestId = 2;
	optional string group = 3;
	optional string subGroup = 4;
	optional LockInfo lockInfo = 5;
	optional int32 flag = 6;
	optional uint64 version = 7;
	optional string providerName = 8;
}